# pretty-plot

./: .gitignore  Pretty Plot.ipynb  README.md  brief_examples.ipynb  environment.yml  pplot.py  pyproject.toml  setup.py
data/zcam/: fakeIOFspectra-marslab.csv  fakeIOFspectra.csv
data/zcam/lab/: Amph_JSC1_Johnson.csv  Amph_JSC1_Johnson_simulated_HiRISE.csv  Amph_JSC1_Johnson_simulated_PANCAM.csv  Amph_Nanophase_Hematite_s6fn18_Morris_simulated_Mastcam-Z.csv  Amph_obsidian_glass_GS-CMP-015_RELAB.csv  Amph_obsidian_glass_GS-CMP-015_RELAB_simulated_HiRISE.csv  Amph_obsidian_glass_GS-CMP-015_RELAB_simulated_LANDSAT 8 OLI.csv  Amph_obsidian_glass_GS-CMP-015_RELAB_simulated_PANCAM.csv  Amph_obsidian_glass_GS-CMP-015_RELAB_simulated_Pathfinder IMP.csv  Amph_tektite_glass_tek001_HOSERlab_simulated_HiRISE.csv  Amph_tektite_glass_tek001_HOSERlab_simulated_LANDSAT 8 OLI.csv  Amph_tektite_glass_tek001_HOSERlab_simulated_MASTCAM.csv  Amph_tektite_glass_tek001_HOSERlab_simulated_Mastcam-Z.csv  CARB_Calcite_WS272_USGS_simulated_HiRISE.csv  CARB_Calcite_WS272_USGS_simulated_LANDSAT 8 OLI.csv  CARB_Calcite_WS272_USGS_simulated_MASTCAM.csv  CARB_Calcite_WS272_USGS_simulated_Pathfinder IMP.csv  CARB_Dolomite_HS102-3B_USGS_simulated_LANDSAT 8 OLI.csv  CARB_Dolomite_HS102-3B_USGS_simulated_MASTCAM.csv  CARB_Dolomite_HS102-3B_USGS_simulated_Mastcam-Z.csv  CARB_Hydromagnesite-cacb49_HOSERLab_simulated_HiRISE.csv  CARB_Siderite_HS271-3B_USGS.csv  (+227 more)
pplot/: __init__.py  cli.py  convert.py  pplot_utils.py
pretty_plot/: __init__.py  cli.py  convert.py  fileutils.py  pplot_utils.py
(+270 files in other folders)
